# permit-copilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: analyze-letter.md  ingest.md  search-codes.md
data/knowledge/: _index.md
data/knowledge/jersey-city/: jc-zoning-overview.md
data/knowledge/nyc-dob/: dob-now-build-user-manual.md  energy-objections-guide.md  ndr-submission-guide.md  objection-review.md  plan-exam-overview.md  required-items-guide.md  second-review-factsheet.md
data/samples/: sample_objection_sheet.txt
eval/: eval_harness.py  test_cli.py
kb/: manifest.yaml
src/: __main__.py  main.py
src/ingest/: downloader.py
tests/: test_eval.py
